### TBD - PLL  -- Version 9.1.1
    ACSREJ calculations now in electrons. Threshold uses ERR arrays. Bug fixes.### 01-Jun-2017 - JAN -- Version 9.2.0
    New CTE algorithm implemented. Use of either new (gen2) & old (gen1) 
    dynamically detected from CTE_NAME in PCTETAB, however --ctegen 1 is explicitly
    required to override the gen2 default.
    New cmd line options added: --ntherads <n>, --ctegen <1|2>, --pctetab <filename>

### 21-Feb-2017 - PLL -- Version 9.1.0
    New SINKCORR step is added to ACSCCD for WFC.

### 22-Nov-2016 - PLL -- Version 9.0.0
    BLEVCORR modified to correctly process all subarrays by using new OSCNTAB
    that correctly define overscans for all WFC and HRC apertures.

### 21-Oct-2016 - PLL -- Version 8.3.5
    BLEVCORR modified to correctly process polarizer and ramp subarrays that
    use new readout format added by FSW change since Oct 2016.

### 07-Jul-2016 - PLL -- Version 8.3.4
    BLEVCORR modified to correctly process new subarrays added by FSW change in
    May 2016.

### 27-Jul-2015 - PLL -- Version 8.3.3
    ACSREJ can now process input list of any length (as allowed by memory).

### 02-Mar-2015 - PLL -- Version 8.3.2
    ACSREJ can now process longer input list (up to 509 characters).

### 10-Oct-2014 - PLL -- Version 8.3.1
    ACS2D standalone executable now reads calibration flags from header, not
    command line.

### 08-Apr-2014 - PLL -- Version 8.3.0
    PCTECORR now supports WFC 2K subarrays.

### 14-Nov-2013 - PLL -- Version 8.2.1
    Fixed ACSREJ bug where files are not being closed properly before being
    reopened. This fix is compulsory due to recent changes to HSTIO.

### 12-Aug-2013 - PLL -- Version 8.2.0
    New ACSCTE sub-module added to separate PCTECORR from ACSCCD.
    ACSCTE runs after ACSCCD but before ACS2D.

### 04-Apr-2013 - PLL -- Version 8.1.3
    Removed FLSCFILE support as it is no longer needed.
    Only FLSHFILE is used for post-flash correction regardless of PCTECORR flag.
