@@ -4,7 +4,7 @@
 /* This string is written to the output primary header as CAL_VER. */
 
 
-# define WF3_CAL_VER "3.4.1(Apr-10-2017)"
-# define WF3_CAL_VER_NUM "3.4.1"
+# define WF3_CAL_VER "3.4.2(Jan-19-2018)"
+# define WF3_CAL_VER_NUM "3.4.2"
 
 #endif /* INCL_WF3VERSION_H */
