@@ -1,3 +1,6 @@
+### 19-Jan-2018 - JAN/MDD - Version 3.4.2
+    - A number of code robustness improvements (address memory leaks, fix detected bugs) were implemented.
+
 ### 10-Apr-2016 - MLS - Version 3.4.1
     - Fixed missed init for header vars in cte code
 
